// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileSystemUtil > walkFileTree > returns node for a valid path 1`] = `
{
  "blocks": 8,
  "children": [
    {
      "blocks": 8,
      "children": [],
      "group": "nathanwise",
      "isDirectory": true,
      "lastModifiedTime": 2000-01-01T00:00:00.000Z,
      "name": "bar",
      "owner": "nathanwise",
      "path": "src/main/foo",
      "permissions": [
        6,
        6,
        4,
      ],
      "size": 0,
    },
    {
      "blocks": 12,
      "group": "nathanwise",
      "isDirectory": false,
      "lastModifiedTime": 2000-01-01T00:00:00.000Z,
      "name": "daz",
      "owner": "nathanwise",
      "path": "src/main/foo",
      "permissions": [
        6,
        6,
        4,
      ],
      "size": 0,
    },
    {
      "blocks": 23,
      "group": "nathanwise",
      "isDirectory": false,
      "lastModifiedTime": 2000-01-01T00:00:00.000Z,
      "name": "bazzing.gaz",
      "owner": "nathanwise",
      "path": "src/main/foo",
      "permissions": [
        6,
        6,
        4,
      ],
      "size": 0,
    },
  ],
  "group": "nathanwise",
  "isDirectory": true,
  "lastModifiedTime": 2000-01-01T00:00:00.000Z,
  "name": "foo",
  "owner": "nathanwise",
  "path": "src/main",
  "permissions": [
    6,
    6,
    4,
  ],
  "size": 0,
}
`;

exports[`FileSystemUtil > walkFileTree > returns node for a valid single directory with children 1`] = `
{
  "blocks": 8,
  "children": [
    {
      "blocks": 8,
      "children": [
        {
          "blocks": 8,
          "children": [
            {
              "blocks": 8,
              "children": [],
              "group": "nathanwise",
              "isDirectory": true,
              "lastModifiedTime": 2000-01-01T00:00:00.000Z,
              "name": "bar",
              "owner": "nathanwise",
              "path": "src/main/foo",
              "permissions": [
                6,
                6,
                4,
              ],
              "size": 0,
            },
            {
              "blocks": 12,
              "group": "nathanwise",
              "isDirectory": false,
              "lastModifiedTime": 2000-01-01T00:00:00.000Z,
              "name": "daz",
              "owner": "nathanwise",
              "path": "src/main/foo",
              "permissions": [
                6,
                6,
                4,
              ],
              "size": 0,
            },
            {
              "blocks": 23,
              "group": "nathanwise",
              "isDirectory": false,
              "lastModifiedTime": 2000-01-01T00:00:00.000Z,
              "name": "bazzing.gaz",
              "owner": "nathanwise",
              "path": "src/main/foo",
              "permissions": [
                6,
                6,
                4,
              ],
              "size": 0,
            },
          ],
          "group": "nathanwise",
          "isDirectory": true,
          "lastModifiedTime": 2000-01-01T00:00:00.000Z,
          "name": "foo",
          "owner": "nathanwise",
          "path": "src/main",
          "permissions": [
            6,
            6,
            4,
          ],
          "size": 0,
        },
        {
          "blocks": 19,
          "group": "nathanwise",
          "isDirectory": false,
          "lastModifiedTime": 2000-01-01T00:00:00.000Z,
          "name": ".testing",
          "owner": "nathanwise",
          "path": "src/main",
          "permissions": [
            6,
            6,
            4,
          ],
          "size": 0,
        },
        {
          "blocks": 8,
          "children": [],
          "group": "nathanwise",
          "isDirectory": true,
          "lastModifiedTime": 2000-01-01T00:00:00.000Z,
          "name": ".empty",
          "owner": "nathanwise",
          "path": "src/main",
          "permissions": [
            6,
            6,
            4,
          ],
          "size": 0,
        },
        {
          "blocks": 8,
          "children": [
            {
              "blocks": 0,
              "children": [],
              "group": "nathanwise",
              "isDirectory": true,
              "lastModifiedTime": 2000-01-01T00:00:00.000Z,
              "name": "someEmptyDir",
              "owner": "nathanwise",
              "path": "src/main/.full",
              "permissions": [
                6,
                6,
                4,
              ],
              "size": 0,
            },
            {
              "blocks": 12,
              "group": "nathanwise",
              "isDirectory": false,
              "lastModifiedTime": 2000-01-01T00:00:00.000Z,
              "name": "aFile",
              "owner": "nathanwise",
              "path": "src/main/.full",
              "permissions": [
                6,
                6,
                4,
              ],
              "size": 0,
            },
          ],
          "group": "nathanwise",
          "isDirectory": true,
          "lastModifiedTime": 2000-01-01T00:00:00.000Z,
          "name": ".full",
          "owner": "nathanwise",
          "path": "src/main",
          "permissions": [
            6,
            6,
            4,
          ],
          "size": 0,
        },
      ],
      "group": "nathanwise",
      "isDirectory": true,
      "lastModifiedTime": 2000-01-01T00:00:00.000Z,
      "name": "main",
      "owner": "nathanwise",
      "path": "src",
      "permissions": [
        6,
        6,
        4,
      ],
      "size": 0,
    },
    {
      "blocks": 52,
      "group": "nathanwise",
      "isDirectory": false,
      "lastModifiedTime": 2000-01-01T00:00:00.000Z,
      "name": "index.ts",
      "owner": "nathanwise",
      "path": "src",
      "permissions": [
        6,
        6,
        4,
      ],
      "size": 0,
    },
  ],
  "group": "nathanwise",
  "isDirectory": true,
  "lastModifiedTime": 2000-01-01T00:00:00.000Z,
  "name": "src",
  "owner": "nathanwise",
  "path": "",
  "permissions": [
    6,
    6,
    4,
  ],
  "size": 0,
}
`;

exports[`FileSystemUtil > walkFileTree > returns node for a valid single directory with no children 1`] = `
{
  "blocks": 8,
  "children": [],
  "group": "nathanwise",
  "isDirectory": true,
  "lastModifiedTime": 2000-01-01T00:00:00.000Z,
  "name": "test",
  "owner": "nathanwise",
  "path": "",
  "permissions": [
    6,
    6,
    4,
  ],
  "size": 0,
}
`;

exports[`FileSystemUtil > walkFileTree > returns root node for an empty path 1`] = `
{
  "blocks": 0,
  "children": [
    {
      "blocks": 8,
      "children": [
        {
          "blocks": 8,
          "children": [
            {
              "blocks": 8,
              "children": [
                {
                  "blocks": 8,
                  "children": [],
                  "group": "nathanwise",
                  "isDirectory": true,
                  "lastModifiedTime": 2000-01-01T00:00:00.000Z,
                  "name": "bar",
                  "owner": "nathanwise",
                  "path": "src/main/foo",
                  "permissions": [
                    6,
                    6,
                    4,
                  ],
                  "size": 0,
                },
                {
                  "blocks": 12,
                  "group": "nathanwise",
                  "isDirectory": false,
                  "lastModifiedTime": 2000-01-01T00:00:00.000Z,
                  "name": "daz",
                  "owner": "nathanwise",
                  "path": "src/main/foo",
                  "permissions": [
                    6,
                    6,
                    4,
                  ],
                  "size": 0,
                },
                {
                  "blocks": 23,
                  "group": "nathanwise",
                  "isDirectory": false,
                  "lastModifiedTime": 2000-01-01T00:00:00.000Z,
                  "name": "bazzing.gaz",
                  "owner": "nathanwise",
                  "path": "src/main/foo",
                  "permissions": [
                    6,
                    6,
                    4,
                  ],
                  "size": 0,
                },
              ],
              "group": "nathanwise",
              "isDirectory": true,
              "lastModifiedTime": 2000-01-01T00:00:00.000Z,
              "name": "foo",
              "owner": "nathanwise",
              "path": "src/main",
              "permissions": [
                6,
                6,
                4,
              ],
              "size": 0,
            },
            {
              "blocks": 19,
              "group": "nathanwise",
              "isDirectory": false,
              "lastModifiedTime": 2000-01-01T00:00:00.000Z,
              "name": ".testing",
              "owner": "nathanwise",
              "path": "src/main",
              "permissions": [
                6,
                6,
                4,
              ],
              "size": 0,
            },
            {
              "blocks": 8,
              "children": [],
              "group": "nathanwise",
              "isDirectory": true,
              "lastModifiedTime": 2000-01-01T00:00:00.000Z,
              "name": ".empty",
              "owner": "nathanwise",
              "path": "src/main",
              "permissions": [
                6,
                6,
                4,
              ],
              "size": 0,
            },
            {
              "blocks": 8,
              "children": [
                {
                  "blocks": 0,
                  "children": [],
                  "group": "nathanwise",
                  "isDirectory": true,
                  "lastModifiedTime": 2000-01-01T00:00:00.000Z,
                  "name": "someEmptyDir",
                  "owner": "nathanwise",
                  "path": "src/main/.full",
                  "permissions": [
                    6,
                    6,
                    4,
                  ],
                  "size": 0,
                },
                {
                  "blocks": 12,
                  "group": "nathanwise",
                  "isDirectory": false,
                  "lastModifiedTime": 2000-01-01T00:00:00.000Z,
                  "name": "aFile",
                  "owner": "nathanwise",
                  "path": "src/main/.full",
                  "permissions": [
                    6,
                    6,
                    4,
                  ],
                  "size": 0,
                },
              ],
              "group": "nathanwise",
              "isDirectory": true,
              "lastModifiedTime": 2000-01-01T00:00:00.000Z,
              "name": ".full",
              "owner": "nathanwise",
              "path": "src/main",
              "permissions": [
                6,
                6,
                4,
              ],
              "size": 0,
            },
          ],
          "group": "nathanwise",
          "isDirectory": true,
          "lastModifiedTime": 2000-01-01T00:00:00.000Z,
          "name": "main",
          "owner": "nathanwise",
          "path": "src",
          "permissions": [
            6,
            6,
            4,
          ],
          "size": 0,
        },
        {
          "blocks": 52,
          "group": "nathanwise",
          "isDirectory": false,
          "lastModifiedTime": 2000-01-01T00:00:00.000Z,
          "name": "index.ts",
          "owner": "nathanwise",
          "path": "src",
          "permissions": [
            6,
            6,
            4,
          ],
          "size": 0,
        },
      ],
      "group": "nathanwise",
      "isDirectory": true,
      "lastModifiedTime": 2000-01-01T00:00:00.000Z,
      "name": "src",
      "owner": "nathanwise",
      "path": "",
      "permissions": [
        6,
        6,
        4,
      ],
      "size": 0,
    },
    {
      "blocks": 8,
      "children": [],
      "group": "nathanwise",
      "isDirectory": true,
      "lastModifiedTime": 2000-01-01T00:00:00.000Z,
      "name": "test",
      "owner": "nathanwise",
      "path": "",
      "permissions": [
        6,
        6,
        4,
      ],
      "size": 0,
    },
  ],
  "group": "",
  "isDirectory": true,
  "lastModifiedTime": 2000-01-01T00:00:00.000Z,
  "name": "",
  "owner": "",
  "path": "",
  "permissions": [],
  "size": 0,
}
`;
